--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,19 +5,29 @@ export(mat2spm)
 export(spm2mat)
 exportClasses(spm)
 exportMethods("%*%")
+exportMethods("[")
 exportMethods(chol)
 exportMethods(crossprod)
 exportMethods(diag)
+exportMethods(dim)
+exportMethods(ncol)
+exportMethods(nrow)
+exportMethods(print)
+exportMethods(show)
 exportMethods(solve)
 exportMethods(t)
 exportMethods(tcrossprod)
 import(methods)
+useDynLib(spm,R_bracket_spm)
 useDynLib(spm,R_chol_spm)
 useDynLib(spm,R_crossprod_spm)
 useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
+useDynLib(spm,R_dim_spm)
 useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
+useDynLib(spm,R_ncol_spm)
+useDynLib(spm,R_nrow_spm)
 useDynLib(spm,R_solve_spm)
 useDynLib(spm,R_solve_spmspm)
 useDynLib(spm,R_spm2mat)
