--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods(chol)
 exportMethods(crossprod)
 exportMethods(diag)
 exportMethods(dim)
+exportMethods(isSymmetric)
 exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(print)
@@ -24,6 +25,7 @@ useDynLib(spm,R_crossprod_spm)
 useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
 useDynLib(spm,R_dim_spm)
+useDynLib(spm,R_isSymmetric_spm)
 useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
 useDynLib(spm,R_ncol_spm)
