handle vectors as well

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
 useDynLib(spm,R_dim_spm)
 useDynLib(spm,R_isSymmetric_spm)
+useDynLib(spm,R_isavec_spm)
 useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
 useDynLib(spm,R_ncol_spm)
