add object.size method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ exportMethods(dim)
 exportMethods(isSymmetric)
 exportMethods(ncol)
 exportMethods(nrow)
+exportMethods(object.size)
 exportMethods(print)
 exportMethods(show)
 exportMethods(solve)
@@ -33,6 +34,7 @@ useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
 useDynLib(spm,R_ncol_spm)
 useDynLib(spm,R_nrow_spm)
+useDynLib(spm,R_numbytes_spm)
 useDynLib(spm,R_solve_spm)
 useDynLib(spm,R_solve_spmspm)
 useDynLib(spm,R_spm2mat)
