bundle single precision lapack/blas

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: R
-sudo: required
 warnings_are_errors: true
 
-before_install:
-  - sudo apt-get update -q
-  - sudo apt-get install -y -q libblas-dev liblapack-dev
+env:
+  global:
+    - MAKEFLAGS="-j 2"
