bundle blas/lapack. hopefully finally fix build

--- a/configure.ac
+++ b/configure.ac
@@ -14,11 +14,9 @@ fi
 
 # Obtain from R.
 R_SCMD="${R_HOME}/bin/R CMD config"
-FLIBS=`${R_SCMD} FLIBS`
 BLAS_LIBS=`${R_SCMD} BLAS_LIBS`
 LAPACK_LIBS=`${R_SCMD} LAPACK_LIBS`
 
-echo "FLIBS=${FLIBS}"
 echo "BLAS_LIBS=${BLAS_LIBS}"
 echo "LAPACK_LIBS=${LAPACK_LIBS}"
 
@@ -35,7 +33,7 @@ if test "X${echo_ok}" = "Xyes" -a "X${grep_ok}" = "Xyes"; then
     HAVESBLAS="no"
   fi
 else
-  AC_CHECK_LIB(blas, [sgemm_], [HAVESBLAS=yes], [HAVESBLAS=no])
+  HAVESBLAS="no"
 fi
 
 # Check Rlapack.
@@ -44,15 +42,20 @@ if test "X${echo_ok}" = "Xyes" -a "X${grep_ok}" = "Xyes"; then
   if test "X${useRlapack}" = "X"; then
     AC_CHECK_LIB(lapack, [sgetrf_], [HAVESLAPACK=yes], [HAVESLAPACK=no])
   else
-    HAVESBLAS="no"
+    HAVESLAPACK="no"
   fi
 else
-  AC_CHECK_LIB(lapack, [sgetrf_], [HAVESLAPACK=yes], [HAVESLAPACK=no])
+  HAVESLAPACK="no"
 fi
 
 
 
 # set additional files as needed
+if test "X${HAVESBLAS}" = "Xno" -o "X${HAVESLAPACK}" = "Xno"; then
+  AC_PROG_F77
+fi
+
+
 ADD_OBJS=""
 
 if test "X${HAVESBLAS}" = "Xno"; then
@@ -64,7 +67,7 @@ fi
 
 if test "X${HAVESLAPACK}" = "Xno"; then
   echo "Using internal single precision lapack"
-  ADD_OBJS="${ADD_OBJS} lapack/slapack1.o lapack/slapack2.o lapack/slapack3.o lapack/slapack4.o"
+  ADD_OBJS="lapack/slapack1.o lapack/slapack2.o lapack/slapack3.o lapack/slapack4.o lapack/slamchf77.o lapack/ilas.o ${ADD_OBJS}"
 else
   echo "Using system single precision lapack"
 fi
