--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,6 +1,10 @@
 PKG_CFLAGS = $(SHLIB_OPENMP_CFLAGS)
 PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SHLIB_OPENMP_CFLAGS)
 
-ADD_OBJS = @ADD_OBJS@
+R_SOURCES = $(wildcard *.c)
+OBJECTS = @ADD_OBJS@ $(R_SOURCES:.c=.o)
 
-$(SHLIB): $(ADD_OBJS)
+### Start making here.
+all: $(SHLIB)
+
+$(SHLIB): $(OBJECTS)
