--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ License: BSD 2-clause License + file LICENSE
 Depends:
     R (>= 3.1.0),
     methods
+SystemRequirements: GNU make
 ByteCompile: yes
 URL: https://github.com/wrathematics/spm
 BugReports: https://github.com/wrathematics/spm/issues
