note utils import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ exportMethods(solve)
 exportMethods(t)
 exportMethods(tcrossprod)
 import(methods)
+importFrom(utils,capture.output)
 useDynLib(spm,R_bracket_spm)
 useDynLib(spm,R_chol_spm)
 useDynLib(spm,R_crossprod_spm)
