--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ License: BSD 2-clause License + file LICENSE
 Depends:
     R (>= 3.1.0),
     methods
+Imports:
+    utils
 SystemRequirements: GNU make
 ByteCompile: yes
 URL: https://github.com/wrathematics/spm
