--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,20 @@ Package: spm
 Type: Package
 Title: Single Precision Matrices
 Version: 0.1-0
-Description: TODO
+Description: R comes with a suite of utilities for linear algebra with "numeric"
+    (double precision) vectors/matrices. However, sometimes single precision
+    (or less!) is more than enough for a particular task.  This package extends
+    R's linear algebra facilities to include single precision (float) data.
+    Float vectors/matrices have half the precision of their "numeric"-type
+    counterparts, for a performance vs accuracy tradeoff.  The internal
+    representation is an S4 class, which allows us to keep the syntax identical
+    to that of base R's.  Interaction between base types for binary operators
+    is generally possible.  In these cases, type promotion always defaults to
+    the higher precision.  The package ships with copies of the single precision
+    BLAS and LAPACK, which are automatically built in the event they are needed.
 License: BSD 2-clause License + file LICENSE
+Copyright: The copyright for the single precision BLAS/LAPACK distribution
+    located in src/lapack is given in the file src/lapack/LICENSE.
 Depends:
     R (>= 3.1.0),
     methods
