add diag maker method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ useDynLib(spm,R_chol_spm)
 useDynLib(spm,R_crossprod_spm)
 useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
+useDynLib(spm,R_diagmat_spm)
 useDynLib(spm,R_dim_spm)
 useDynLib(spm,R_isSymmetric_spm)
 useDynLib(spm,R_isavec_spm)
