add random generators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(dbl)
 export(fl)
+export(flrnorm)
+export(flrunif)
 export(is.spm)
 export(mat2spm)
 export(spm2mat)
@@ -30,6 +32,8 @@ useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
 useDynLib(spm,R_diagmat_spm)
 useDynLib(spm,R_dim_spm)
+useDynLib(spm,R_flrnorm_spm)
+useDynLib(spm,R_flrunif_spm)
 useDynLib(spm,R_isSymmetric_spm)
 useDynLib(spm,R_isavec_spm)
 useDynLib(spm,R_mat2spm)
