--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,5 +1,7 @@
 PKG_CFLAGS = $(SHLIB_OPENMP_CFLAGS)
-PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SHLIB_OPENMP_CFLAGS)
+PKG_FFLAGS = $(SHLIB_OPENMP_FFLAGS)
+PKG_FCFLAGS = $(SHLIB_OPENMP_FCFLAGS)
+PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SHLIB_OPENMP_CFLAGS) $(SHLIB_OPENMP_FCFLAGS)
 
 R_SOURCES = $(wildcard *.c)
 OBJECTS = @ADD_OBJS@ $(R_SOURCES:.c=.o)
