--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ exportMethods(crossprod)
 exportMethods(diag)
 exportMethods(dim)
 exportMethods(isSymmetric)
+exportMethods(memuse)
+exportMethods(mu)
 exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(object.size)
@@ -25,6 +27,8 @@ exportMethods(t)
 exportMethods(tcrossprod)
 import(methods)
 importFrom(utils,capture.output)
+importMethodsFrom(memuse,memuse)
+importMethodsFrom(memuse,mu)
 useDynLib(spm,R_bracket_spm)
 useDynLib(spm,R_chol_spm)
 useDynLib(spm,R_crossprod_spm)
