--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,12 @@ exportMethods(chol)
 exportMethods(crossprod)
 exportMethods(diag)
 exportMethods(dim)
+exportMethods(exp)
+exportMethods(expm1)
 exportMethods(isSymmetric)
+exportMethods(log)
+exportMethods(log10)
+exportMethods(log2)
 exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(object.size)
@@ -32,10 +37,15 @@ useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
 useDynLib(spm,R_diagmat_spm)
 useDynLib(spm,R_dim_spm)
+useDynLib(spm,R_exp_spm)
+useDynLib(spm,R_expm1_spm)
 useDynLib(spm,R_flrnorm_spm)
 useDynLib(spm,R_flrunif_spm)
 useDynLib(spm,R_isSymmetric_spm)
 useDynLib(spm,R_isavec_spm)
+useDynLib(spm,R_log10_spm)
+useDynLib(spm,R_log2_spm)
+useDynLib(spm,R_log_spm)
 useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
 useDynLib(spm,R_ncol_spm)
