--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,11 @@ export(spm2mat)
 exportClasses(spm)
 exportMethods("%*%")
 exportMethods("[")
+exportMethods(acos)
+exportMethods(asin)
+exportMethods(atan)
 exportMethods(chol)
+exportMethods(cos)
 exportMethods(crossprod)
 exportMethods(diag)
 exportMethods(dim)
@@ -25,13 +29,19 @@ exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
 exportMethods(show)
+exportMethods(sin)
 exportMethods(solve)
 exportMethods(t)
+exportMethods(tan)
 exportMethods(tcrossprod)
 import(methods)
 importFrom(utils,capture.output)
+useDynLib(spm,R_acos_spm)
+useDynLib(spm,R_asin_spm)
+useDynLib(spm,R_atan_spm)
 useDynLib(spm,R_bracket_spm)
 useDynLib(spm,R_chol_spm)
+useDynLib(spm,R_cos_spm)
 useDynLib(spm,R_crossprod_spm)
 useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
@@ -51,9 +61,11 @@ useDynLib(spm,R_matmult_spm)
 useDynLib(spm,R_ncol_spm)
 useDynLib(spm,R_nrow_spm)
 useDynLib(spm,R_numbytes_spm)
+useDynLib(spm,R_sin_spm)
 useDynLib(spm,R_solve_spm)
 useDynLib(spm,R_solve_spmspm)
 useDynLib(spm,R_spm2mat)
+useDynLib(spm,R_tan_spm)
 useDynLib(spm,R_tcrossprod_spm)
 useDynLib(spm,R_tcrossprod_spmspm)
 useDynLib(spm,R_xpose_spm)
