add hyperbolic functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,14 @@ exportClasses(spm)
 exportMethods("%*%")
 exportMethods("[")
 exportMethods(acos)
+exportMethods(acosh)
 exportMethods(asin)
+exportMethods(asinh)
 exportMethods(atan)
+exportMethods(atanh)
 exportMethods(chol)
 exportMethods(cos)
+exportMethods(cosh)
 exportMethods(crossprod)
 exportMethods(diag)
 exportMethods(dim)
@@ -30,18 +34,24 @@ exportMethods(object.size)
 exportMethods(print)
 exportMethods(show)
 exportMethods(sin)
+exportMethods(sinh)
 exportMethods(solve)
 exportMethods(t)
 exportMethods(tan)
+exportMethods(tanh)
 exportMethods(tcrossprod)
 import(methods)
 importFrom(utils,capture.output)
 useDynLib(spm,R_acos_spm)
+useDynLib(spm,R_acosh_spm)
 useDynLib(spm,R_asin_spm)
+useDynLib(spm,R_asinh_spm)
 useDynLib(spm,R_atan_spm)
+useDynLib(spm,R_atanh_spm)
 useDynLib(spm,R_bracket_spm)
 useDynLib(spm,R_chol_spm)
 useDynLib(spm,R_cos_spm)
+useDynLib(spm,R_cosh_spm)
 useDynLib(spm,R_crossprod_spm)
 useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
@@ -62,10 +72,12 @@ useDynLib(spm,R_ncol_spm)
 useDynLib(spm,R_nrow_spm)
 useDynLib(spm,R_numbytes_spm)
 useDynLib(spm,R_sin_spm)
+useDynLib(spm,R_sinh_spm)
 useDynLib(spm,R_solve_spm)
 useDynLib(spm,R_solve_spmspm)
 useDynLib(spm,R_spm2mat)
 useDynLib(spm,R_tan_spm)
+useDynLib(spm,R_tanh_spm)
 useDynLib(spm,R_tcrossprod_spm)
 useDynLib(spm,R_tcrossprod_spmspm)
 useDynLib(spm,R_xpose_spm)
