--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(spm2mat)
 exportClasses(spm)
 exportMethods("%*%")
 exportMethods("[")
+exportMethods(abs)
 exportMethods(acos)
 exportMethods(acosh)
 exportMethods(asin)
@@ -36,12 +37,14 @@ exportMethods(show)
 exportMethods(sin)
 exportMethods(sinh)
 exportMethods(solve)
+exportMethods(sqrt)
 exportMethods(t)
 exportMethods(tan)
 exportMethods(tanh)
 exportMethods(tcrossprod)
 import(methods)
 importFrom(utils,capture.output)
+useDynLib(spm,R_abs_spm)
 useDynLib(spm,R_acos_spm)
 useDynLib(spm,R_acosh_spm)
 useDynLib(spm,R_asin_spm)
@@ -76,6 +79,7 @@ useDynLib(spm,R_sinh_spm)
 useDynLib(spm,R_solve_spm)
 useDynLib(spm,R_solve_spmspm)
 useDynLib(spm,R_spm2mat)
+useDynLib(spm,R_sqrt_spm)
 useDynLib(spm,R_tan_spm)
 useDynLib(spm,R_tanh_spm)
 useDynLib(spm,R_tcrossprod_spm)
