--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,12 @@ exportMethods(diag)
 exportMethods(dim)
 exportMethods(exp)
 exportMethods(expm1)
+exportMethods(gamma)
+exportMethods(is.finite)
+exportMethods(is.infinite)
+exportMethods(is.nan)
 exportMethods(isSymmetric)
+exportMethods(lgamma)
 exportMethods(log)
 exportMethods(log10)
 exportMethods(log2)
@@ -64,8 +69,13 @@ useDynLib(spm,R_exp_spm)
 useDynLib(spm,R_expm1_spm)
 useDynLib(spm,R_flrnorm_spm)
 useDynLib(spm,R_flrunif_spm)
+useDynLib(spm,R_gamma_spm)
 useDynLib(spm,R_isSymmetric_spm)
 useDynLib(spm,R_isavec_spm)
+useDynLib(spm,R_isfinite_spm)
+useDynLib(spm,R_isinfinite_spm)
+useDynLib(spm,R_isnan_spm)
+useDynLib(spm,R_lgamma_spm)
 useDynLib(spm,R_log10_spm)
 useDynLib(spm,R_log2_spm)
 useDynLib(spm,R_log_spm)
