add na handling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,12 +28,15 @@ exportMethods(expm1)
 exportMethods(gamma)
 exportMethods(is.finite)
 exportMethods(is.infinite)
+exportMethods(is.na)
 exportMethods(is.nan)
 exportMethods(isSymmetric)
 exportMethods(lgamma)
 exportMethods(log)
 exportMethods(log10)
 exportMethods(log2)
+exportMethods(na.exclude)
+exportMethods(na.omit)
 exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(object.size)
@@ -74,6 +77,7 @@ useDynLib(spm,R_isSymmetric_spm)
 useDynLib(spm,R_isavec_spm)
 useDynLib(spm,R_isfinite_spm)
 useDynLib(spm,R_isinfinite_spm)
+useDynLib(spm,R_isna_spm)
 useDynLib(spm,R_isnan_spm)
 useDynLib(spm,R_lgamma_spm)
 useDynLib(spm,R_log10_spm)
@@ -81,6 +85,7 @@ useDynLib(spm,R_log2_spm)
 useDynLib(spm,R_log_spm)
 useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
+useDynLib(spm,R_naomit_spm)
 useDynLib(spm,R_ncol_spm)
 useDynLib(spm,R_nrow_spm)
 useDynLib(spm,R_numbytes_spm)
