--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(spm2mat)
 exportClasses(spm)
 exportMethods("%*%")
 exportMethods("[")
+exportMethods(La.svd)
 exportMethods(abs)
 exportMethods(acos)
 exportMethods(acosh)
@@ -46,6 +47,7 @@ exportMethods(sin)
 exportMethods(sinh)
 exportMethods(solve)
 exportMethods(sqrt)
+exportMethods(svd)
 exportMethods(t)
 exportMethods(tan)
 exportMethods(tanh)
@@ -95,6 +97,7 @@ useDynLib(spm,R_solve_spm)
 useDynLib(spm,R_solve_spmspm)
 useDynLib(spm,R_spm2mat)
 useDynLib(spm,R_sqrt_spm)
+useDynLib(spm,R_svd_spm)
 useDynLib(spm,R_tan_spm)
 useDynLib(spm,R_tanh_spm)
 useDynLib(spm,R_tcrossprod_spm)
