--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -4,7 +4,7 @@ PKG_FCFLAGS = $(SHLIB_OPENMP_FCFLAGS)
 PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SHLIB_OPENMP_CFLAGS) $(SHLIB_OPENMP_FCFLAGS)
 
 R_SOURCES = $(wildcard *.c)
-OBJECTS = @ADD_OBJS@ $(R_SOURCES:.c=.o)
+OBJECTS = $(R_SOURCES:.c=.o) @ADD_OBJS@
 
 ### Start making here.
 all: $(SHLIB)
