--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(mat2spm)
 export(spm2mat)
 exportClasses(spm)
 exportMethods("%*%")
+exportMethods("+")
 exportMethods("[")
 exportMethods(La.svd)
 exportMethods(abs)
@@ -57,6 +58,7 @@ importFrom(utils,capture.output)
 useDynLib(spm,R_abs_spm)
 useDynLib(spm,R_acos_spm)
 useDynLib(spm,R_acosh_spm)
+useDynLib(spm,R_add_spm)
 useDynLib(spm,R_asin_spm)
 useDynLib(spm,R_asinh_spm)
 useDynLib(spm,R_atan_spm)
