--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(mat2spm)
 export(spm2mat)
 exportClasses(spm)
 exportMethods("%*%")
+exportMethods("*")
 exportMethods("+")
 exportMethods("[")
 exportMethods(La.svd)
@@ -89,6 +90,7 @@ useDynLib(spm,R_log2_spm)
 useDynLib(spm,R_log_spm)
 useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
+useDynLib(spm,R_mul_spm)
 useDynLib(spm,R_naomit_spm)
 useDynLib(spm,R_ncol_spm)
 useDynLib(spm,R_nrow_spm)
