--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ exportClasses(spm)
 exportMethods("%*%")
 exportMethods("*")
 exportMethods("+")
+exportMethods("-")
 exportMethods("[")
 exportMethods(La.svd)
 exportMethods(abs)
@@ -101,6 +102,7 @@ useDynLib(spm,R_solve_spm)
 useDynLib(spm,R_solve_spmspm)
 useDynLib(spm,R_spm2mat)
 useDynLib(spm,R_sqrt_spm)
+useDynLib(spm,R_sub_spm)
 useDynLib(spm,R_svd_spm)
 useDynLib(spm,R_tan_spm)
 useDynLib(spm,R_tanh_spm)
