add more binary operations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,9 @@ exportMethods("%*%")
 exportMethods("*")
 exportMethods("+")
 exportMethods("-")
+exportMethods("/")
 exportMethods("[")
+exportMethods("^")
 exportMethods(La.svd)
 exportMethods(abs)
 exportMethods(acos)
@@ -74,6 +76,7 @@ useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
 useDynLib(spm,R_diagmat_spm)
 useDynLib(spm,R_dim_spm)
+useDynLib(spm,R_div_spm)
 useDynLib(spm,R_exp_spm)
 useDynLib(spm,R_expm1_spm)
 useDynLib(spm,R_flrnorm_spm)
@@ -96,6 +99,7 @@ useDynLib(spm,R_naomit_spm)
 useDynLib(spm,R_ncol_spm)
 useDynLib(spm,R_nrow_spm)
 useDynLib(spm,R_numbytes_spm)
+useDynLib(spm,R_pow_spm)
 useDynLib(spm,R_sin_spm)
 useDynLib(spm,R_sinh_spm)
 useDynLib(spm,R_solve_spm)
