add row/col sums/means

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ exportMethods(asinh)
 exportMethods(atan)
 exportMethods(atanh)
 exportMethods(chol)
+exportMethods(colMeans)
+exportMethods(colSums)
 exportMethods(cos)
 exportMethods(cosh)
 exportMethods(crossprod)
@@ -47,6 +49,8 @@ exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
+exportMethods(rowMeans)
+exportMethods(rowSums)
 exportMethods(show)
 exportMethods(sin)
 exportMethods(sinh)
@@ -69,6 +73,8 @@ useDynLib(spm,R_atan_spm)
 useDynLib(spm,R_atanh_spm)
 useDynLib(spm,R_bracket_spm)
 useDynLib(spm,R_chol_spm)
+useDynLib(spm,R_colMeans_spm)
+useDynLib(spm,R_colSums_spm)
 useDynLib(spm,R_cos_spm)
 useDynLib(spm,R_cosh_spm)
 useDynLib(spm,R_crossprod_spm)
@@ -100,6 +106,8 @@ useDynLib(spm,R_ncol_spm)
 useDynLib(spm,R_nrow_spm)
 useDynLib(spm,R_numbytes_spm)
 useDynLib(spm,R_pow_spm)
+useDynLib(spm,R_rowMeans_spm)
+useDynLib(spm,R_rowSums_spm)
 useDynLib(spm,R_sin_spm)
 useDynLib(spm,R_sinh_spm)
 useDynLib(spm,R_solve_spm)
