export R_init_NA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ useDynLib(spm,R_expm1_spm)
 useDynLib(spm,R_flrnorm_spm)
 useDynLib(spm,R_flrunif_spm)
 useDynLib(spm,R_gamma_spm)
+useDynLib(spm,R_init_NA)
 useDynLib(spm,R_isSymmetric_spm)
 useDynLib(spm,R_isavec_spm)
 useDynLib(spm,R_isfinite_spm)
