--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ exportMethods(log2)
 exportMethods(na.exclude)
 exportMethods(na.omit)
 exportMethods(ncol)
+exportMethods(norm)
 exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
@@ -104,6 +105,7 @@ useDynLib(spm,R_matmult_spm)
 useDynLib(spm,R_mul_spm)
 useDynLib(spm,R_naomit_spm)
 useDynLib(spm,R_ncol_spm)
+useDynLib(spm,R_norm_spm)
 useDynLib(spm,R_nrow_spm)
 useDynLib(spm,R_numbytes_spm)
 useDynLib(spm,R_pow_spm)
