first pass at qr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,9 @@ exportMethods(norm)
 exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
+exportMethods(qr)
+exportMethods(qr.Q)
+exportMethods(qr.R)
 exportMethods(rowMeans)
 exportMethods(rowSums)
 exportMethods(show)
@@ -109,6 +112,9 @@ useDynLib(spm,R_norm_spm)
 useDynLib(spm,R_nrow_spm)
 useDynLib(spm,R_numbytes_spm)
 useDynLib(spm,R_pow_spm)
+useDynLib(spm,R_qrQ_spm)
+useDynLib(spm,R_qrR_spm)
+useDynLib(spm,R_qr_spm)
 useDynLib(spm,R_rowMeans_spm)
 useDynLib(spm,R_rowSums_spm)
 useDynLib(spm,R_sin_spm)
