--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,11 @@ exportMethods("*")
 exportMethods("+")
 exportMethods("-")
 exportMethods("/")
+exportMethods("<")
+exportMethods("<=")
+exportMethods("==")
+exportMethods(">")
+exportMethods(">=")
 exportMethods("[")
 exportMethods("^")
 exportMethods(La.svd)
@@ -87,11 +92,14 @@ useDynLib(spm,R_diag_spm)
 useDynLib(spm,R_diagmat_spm)
 useDynLib(spm,R_dim_spm)
 useDynLib(spm,R_div_spm)
+useDynLib(spm,R_eq_spm)
 useDynLib(spm,R_exp_spm)
 useDynLib(spm,R_expm1_spm)
 useDynLib(spm,R_flrnorm_spm)
 useDynLib(spm,R_flrunif_spm)
 useDynLib(spm,R_gamma_spm)
+useDynLib(spm,R_ge_spm)
+useDynLib(spm,R_gt_spm)
 useDynLib(spm,R_init_NA)
 useDynLib(spm,R_isSymmetric_spm)
 useDynLib(spm,R_isavec_spm)
@@ -99,10 +107,12 @@ useDynLib(spm,R_isfinite_spm)
 useDynLib(spm,R_isinfinite_spm)
 useDynLib(spm,R_isna_spm)
 useDynLib(spm,R_isnan_spm)
+useDynLib(spm,R_le_spm)
 useDynLib(spm,R_lgamma_spm)
 useDynLib(spm,R_log10_spm)
 useDynLib(spm,R_log2_spm)
 useDynLib(spm,R_log_spm)
+useDynLib(spm,R_lt_spm)
 useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
 useDynLib(spm,R_mul_spm)
