--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ exportMethods(sin)
 exportMethods(sinh)
 exportMethods(solve)
 exportMethods(sqrt)
+exportMethods(sum)
 exportMethods(svd)
 exportMethods(t)
 exportMethods(tan)
@@ -134,6 +135,7 @@ useDynLib(spm,R_solve_spmspm)
 useDynLib(spm,R_spm2mat)
 useDynLib(spm,R_sqrt_spm)
 useDynLib(spm,R_sub_spm)
+useDynLib(spm,R_sum_spm)
 useDynLib(spm,R_svd_spm)
 useDynLib(spm,R_tan_spm)
 useDynLib(spm,R_tanh_spm)
