--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ exportMethods(asin)
 exportMethods(asinh)
 exportMethods(atan)
 exportMethods(atanh)
+exportMethods(c)
 exportMethods(chol)
 exportMethods(colMeans)
 exportMethods(colSums)
@@ -82,6 +83,7 @@ useDynLib(spm,R_asinh_spm)
 useDynLib(spm,R_atan_spm)
 useDynLib(spm,R_atanh_spm)
 useDynLib(spm,R_bracket_spm)
+useDynLib(spm,R_c_spm)
 useDynLib(spm,R_chol_spm)
 useDynLib(spm,R_colMeans_spm)
 useDynLib(spm,R_colSums_spm)
