--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,8 @@ exportMethods(lgamma)
 exportMethods(log)
 exportMethods(log10)
 exportMethods(log2)
+exportMethods(max)
+exportMethods(min)
 exportMethods(na.exclude)
 exportMethods(na.omit)
 exportMethods(ncol)
@@ -118,6 +120,8 @@ useDynLib(spm,R_log_spm)
 useDynLib(spm,R_lt_spm)
 useDynLib(spm,R_mat2spm)
 useDynLib(spm,R_matmult_spm)
+useDynLib(spm,R_max_spm)
+useDynLib(spm,R_min_spm)
 useDynLib(spm,R_mul_spm)
 useDynLib(spm,R_naomit_spm)
 useDynLib(spm,R_ncol_spm)
