--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ exportMethods(is.infinite)
 exportMethods(is.na)
 exportMethods(is.nan)
 exportMethods(isSymmetric)
+exportMethods(length)
 exportMethods(lgamma)
 exportMethods(log)
 exportMethods(log10)
@@ -113,6 +114,7 @@ useDynLib(spm,R_isinfinite_spm)
 useDynLib(spm,R_isna_spm)
 useDynLib(spm,R_isnan_spm)
 useDynLib(spm,R_le_spm)
+useDynLib(spm,R_length_spm)
 useDynLib(spm,R_lgamma_spm)
 useDynLib(spm,R_log10_spm)
 useDynLib(spm,R_log2_spm)
