--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ exportMethods(solve)
 exportMethods(sqrt)
 exportMethods(sum)
 exportMethods(svd)
+exportMethods(sweep)
 exportMethods(t)
 exportMethods(tan)
 exportMethods(tanh)
@@ -145,6 +146,7 @@ useDynLib(spm,R_sqrt_spm)
 useDynLib(spm,R_sub_spm)
 useDynLib(spm,R_sum_spm)
 useDynLib(spm,R_svd_spm)
+useDynLib(spm,R_sweep_spm)
 useDynLib(spm,R_tan_spm)
 useDynLib(spm,R_tanh_spm)
 useDynLib(spm,R_tcrossprod_spm)
