--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ exportMethods(qr.Q)
 exportMethods(qr.R)
 exportMethods(rowMeans)
 exportMethods(rowSums)
+exportMethods(scale)
 exportMethods(show)
 exportMethods(sin)
 exportMethods(sinh)
@@ -137,6 +138,7 @@ useDynLib(spm,R_qrR_spm)
 useDynLib(spm,R_qr_spm)
 useDynLib(spm,R_rowMeans_spm)
 useDynLib(spm,R_rowSums_spm)
+useDynLib(spm,R_scale_spm)
 useDynLib(spm,R_sin_spm)
 useDynLib(spm,R_sinh_spm)
 useDynLib(spm,R_solve_spm)
