add rounding funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ exportMethods(asinh)
 exportMethods(atan)
 exportMethods(atanh)
 exportMethods(c)
+exportMethods(ceiling)
 exportMethods(chol)
 exportMethods(colMeans)
 exportMethods(colSums)
@@ -40,6 +41,7 @@ exportMethods(diag)
 exportMethods(dim)
 exportMethods(exp)
 exportMethods(expm1)
+exportMethods(floor)
 exportMethods(gamma)
 exportMethods(is.finite)
 exportMethods(is.infinite)
@@ -63,6 +65,7 @@ exportMethods(print)
 exportMethods(qr)
 exportMethods(qr.Q)
 exportMethods(qr.R)
+exportMethods(round)
 exportMethods(rowMeans)
 exportMethods(rowSums)
 exportMethods(scale)
@@ -78,6 +81,7 @@ exportMethods(t)
 exportMethods(tan)
 exportMethods(tanh)
 exportMethods(tcrossprod)
+exportMethods(trunc)
 import(methods)
 importFrom(utils,capture.output)
 useDynLib(spm,R_abs_spm)
@@ -90,6 +94,7 @@ useDynLib(spm,R_atan_spm)
 useDynLib(spm,R_atanh_spm)
 useDynLib(spm,R_bracket_spm)
 useDynLib(spm,R_c_spm)
+useDynLib(spm,R_ceiling_spm)
 useDynLib(spm,R_chol_spm)
 useDynLib(spm,R_colMeans_spm)
 useDynLib(spm,R_colSums_spm)
@@ -104,6 +109,7 @@ useDynLib(spm,R_div_spm)
 useDynLib(spm,R_eq_spm)
 useDynLib(spm,R_exp_spm)
 useDynLib(spm,R_expm1_spm)
+useDynLib(spm,R_floor_spm)
 useDynLib(spm,R_flrnorm_spm)
 useDynLib(spm,R_flrunif_spm)
 useDynLib(spm,R_gamma_spm)
@@ -137,6 +143,7 @@ useDynLib(spm,R_pow_spm)
 useDynLib(spm,R_qrQ_spm)
 useDynLib(spm,R_qrR_spm)
 useDynLib(spm,R_qr_spm)
+useDynLib(spm,R_round_spm)
 useDynLib(spm,R_rowMeans_spm)
 useDynLib(spm,R_rowSums_spm)
 useDynLib(spm,R_scale_spm)
@@ -154,4 +161,5 @@ useDynLib(spm,R_tan_spm)
 useDynLib(spm,R_tanh_spm)
 useDynLib(spm,R_tcrossprod_spm)
 useDynLib(spm,R_tcrossprod_spmspm)
+useDynLib(spm,R_trunc_spm)
 useDynLib(spm,R_xpose_spm)
