add which.max and which.min

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,8 @@ exportMethods(tan)
 exportMethods(tanh)
 exportMethods(tcrossprod)
 exportMethods(trunc)
+exportMethods(which.max)
+exportMethods(which.min)
 import(methods)
 importFrom(utils,capture.output)
 useDynLib(spm,R_abs_spm)
@@ -162,4 +164,6 @@ useDynLib(spm,R_tanh_spm)
 useDynLib(spm,R_tcrossprod_spm)
 useDynLib(spm,R_tcrossprod_spmspm)
 useDynLib(spm,R_trunc_spm)
+useDynLib(spm,R_whichmax_spm)
+useDynLib(spm,R_whichmin_spm)
 useDynLib(spm,R_xpose_spm)
