--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ exportMethods(">")
 exportMethods(">=")
 exportMethods("[")
 exportMethods("^")
+exportMethods("dim<-")
 exportMethods(La.svd)
 exportMethods(abs)
 exportMethods(acos)
@@ -107,6 +108,7 @@ useDynLib(spm,R_crossprod_spmspm)
 useDynLib(spm,R_diag_spm)
 useDynLib(spm,R_diagmat_spm)
 useDynLib(spm,R_dim_spm)
+useDynLib(spm,R_dimset_spm)
 useDynLib(spm,R_div_spm)
 useDynLib(spm,R_eq_spm)
 useDynLib(spm,R_exp_spm)
