make various dims getters completely conform to R's behavior

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ exportMethods("[")
 exportMethods("^")
 exportMethods("dim<-")
 exportMethods(La.svd)
+exportMethods(NCOL)
+exportMethods(NROW)
 exportMethods(abs)
 exportMethods(acos)
 exportMethods(acosh)
@@ -87,6 +89,8 @@ exportMethods(which.max)
 exportMethods(which.min)
 import(methods)
 importFrom(utils,capture.output)
+useDynLib(spm,R_NCOL_spm)
+useDynLib(spm,R_NROW_spm)
 useDynLib(spm,R_abs_spm)
 useDynLib(spm,R_acos_spm)
 useDynLib(spm,R_acosh_spm)
