export anyNA to R for internal use

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ useDynLib(spm,R_abs_spm)
 useDynLib(spm,R_acos_spm)
 useDynLib(spm,R_acosh_spm)
 useDynLib(spm,R_add_spm)
+useDynLib(spm,R_anyNA_spm)
 useDynLib(spm,R_asin_spm)
 useDynLib(spm,R_asinh_spm)
 useDynLib(spm,R_atan_spm)
