finish bracketing, update namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ exportMethods(cosh)
 exportMethods(crossprod)
 exportMethods(diag)
 exportMethods(dim)
+exportMethods(eigen)
 exportMethods(exp)
 exportMethods(expm1)
 exportMethods(floor)
@@ -101,6 +102,7 @@ useDynLib(spm,R_asinh_spm)
 useDynLib(spm,R_atan_spm)
 useDynLib(spm,R_atanh_spm)
 useDynLib(spm,R_bracket_spm)
+useDynLib(spm,R_bracketchecks_spm)
 useDynLib(spm,R_c_spm)
 useDynLib(spm,R_ceiling_spm)
 useDynLib(spm,R_chol_spm)
@@ -166,6 +168,7 @@ useDynLib(spm,R_sub_spm)
 useDynLib(spm,R_sum_spm)
 useDynLib(spm,R_svd_spm)
 useDynLib(spm,R_sweep_spm)
+useDynLib(spm,R_symeig_spm)
 useDynLib(spm,R_tan_spm)
 useDynLib(spm,R_tanh_spm)
 useDynLib(spm,R_tcrossprod_spm)
