--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,8 @@ exportMethods(log)
 exportMethods(log10)
 exportMethods(log2)
 exportMethods(max)
+exportMethods(mean)
+exportMethods(median)
 exportMethods(min)
 exportMethods(na.exclude)
 exportMethods(na.omit)
@@ -70,6 +72,7 @@ exportMethods(print)
 exportMethods(qr)
 exportMethods(qr.Q)
 exportMethods(qr.R)
+exportMethods(rcond)
 exportMethods(round)
 exportMethods(rowMeans)
 exportMethods(rowSums)
@@ -91,91 +94,94 @@ exportMethods(which.max)
 exportMethods(which.min)
 import(methods)
 importFrom(utils,capture.output)
-useDynLib(spm,R_NCOL_spm)
-useDynLib(spm,R_NROW_spm)
-useDynLib(spm,R_abs_spm)
-useDynLib(spm,R_acos_spm)
-useDynLib(spm,R_acosh_spm)
-useDynLib(spm,R_add_spm)
-useDynLib(spm,R_anyNA_spm)
-useDynLib(spm,R_asin_spm)
-useDynLib(spm,R_asinh_spm)
-useDynLib(spm,R_atan_spm)
-useDynLib(spm,R_atanh_spm)
-useDynLib(spm,R_bracket_spm)
-useDynLib(spm,R_bracketchecks_spm)
-useDynLib(spm,R_c_spm)
-useDynLib(spm,R_ceiling_spm)
-useDynLib(spm,R_chol_spm)
-useDynLib(spm,R_colMeans_spm)
-useDynLib(spm,R_colSums_spm)
-useDynLib(spm,R_cos_spm)
-useDynLib(spm,R_cosh_spm)
-useDynLib(spm,R_crossprod_spm)
-useDynLib(spm,R_crossprod_spmspm)
-useDynLib(spm,R_diag_spm)
-useDynLib(spm,R_diagmat_spm)
-useDynLib(spm,R_dim_spm)
-useDynLib(spm,R_dimset_spm)
-useDynLib(spm,R_div_spm)
-useDynLib(spm,R_eq_spm)
-useDynLib(spm,R_exp_spm)
-useDynLib(spm,R_expm1_spm)
-useDynLib(spm,R_floor_spm)
-useDynLib(spm,R_flrnorm_spm)
-useDynLib(spm,R_flrunif_spm)
-useDynLib(spm,R_gamma_spm)
-useDynLib(spm,R_ge_spm)
-useDynLib(spm,R_gt_spm)
-useDynLib(spm,R_init_NA)
-useDynLib(spm,R_isSymmetric_spm)
-useDynLib(spm,R_isavec_spm)
-useDynLib(spm,R_isfinite_spm)
-useDynLib(spm,R_isinfinite_spm)
-useDynLib(spm,R_isna_spm)
-useDynLib(spm,R_isnan_spm)
-useDynLib(spm,R_le_spm)
-useDynLib(spm,R_length_spm)
-useDynLib(spm,R_lgamma_spm)
-useDynLib(spm,R_log10_spm)
-useDynLib(spm,R_log2_spm)
-useDynLib(spm,R_log_spm)
-useDynLib(spm,R_lt_spm)
-useDynLib(spm,R_machine_spm)
-useDynLib(spm,R_mat2spm)
-useDynLib(spm,R_matmult_spm)
-useDynLib(spm,R_max_spm)
-useDynLib(spm,R_min_spm)
-useDynLib(spm,R_mul_spm)
-useDynLib(spm,R_naomit_spm)
-useDynLib(spm,R_ncol_spm)
-useDynLib(spm,R_norm_spm)
-useDynLib(spm,R_nrow_spm)
-useDynLib(spm,R_numbytes_spm)
-useDynLib(spm,R_pow_spm)
-useDynLib(spm,R_qrQ_spm)
-useDynLib(spm,R_qrR_spm)
-useDynLib(spm,R_qr_spm)
-useDynLib(spm,R_round_spm)
-useDynLib(spm,R_rowMeans_spm)
-useDynLib(spm,R_rowSums_spm)
-useDynLib(spm,R_scale_spm)
-useDynLib(spm,R_sin_spm)
-useDynLib(spm,R_sinh_spm)
-useDynLib(spm,R_solve_spm)
-useDynLib(spm,R_solve_spmspm)
-useDynLib(spm,R_spm2mat)
-useDynLib(spm,R_sqrt_spm)
-useDynLib(spm,R_sub_spm)
-useDynLib(spm,R_sum_spm)
-useDynLib(spm,R_svd_spm)
-useDynLib(spm,R_sweep_spm)
-useDynLib(spm,R_symeig_spm)
-useDynLib(spm,R_tan_spm)
-useDynLib(spm,R_tanh_spm)
-useDynLib(spm,R_tcrossprod_spm)
-useDynLib(spm,R_tcrossprod_spmspm)
-useDynLib(spm,R_trunc_spm)
-useDynLib(spm,R_whichmax_spm)
-useDynLib(spm,R_whichmin_spm)
-useDynLib(spm,R_xpose_spm)
+useDynLib(float,R_NCOL_spm)
+useDynLib(float,R_NROW_spm)
+useDynLib(float,R_abs_spm)
+useDynLib(float,R_acos_spm)
+useDynLib(float,R_acosh_spm)
+useDynLib(float,R_add_spm)
+useDynLib(float,R_anyNA_spm)
+useDynLib(float,R_asin_spm)
+useDynLib(float,R_asinh_spm)
+useDynLib(float,R_atan_spm)
+useDynLib(float,R_atanh_spm)
+useDynLib(float,R_bracket_spm)
+useDynLib(float,R_bracketchecks_spm)
+useDynLib(float,R_c_spm)
+useDynLib(float,R_ceiling_spm)
+useDynLib(float,R_chol_spm)
+useDynLib(float,R_colMeans_spm)
+useDynLib(float,R_colSums_spm)
+useDynLib(float,R_cos_spm)
+useDynLib(float,R_cosh_spm)
+useDynLib(float,R_crossprod_spm)
+useDynLib(float,R_crossprod_spmspm)
+useDynLib(float,R_diag_spm)
+useDynLib(float,R_diagmat_spm)
+useDynLib(float,R_dim_spm)
+useDynLib(float,R_dimset_spm)
+useDynLib(float,R_div_spm)
+useDynLib(float,R_eq_spm)
+useDynLib(float,R_exp_spm)
+useDynLib(float,R_expm1_spm)
+useDynLib(float,R_floor_spm)
+useDynLib(float,R_flrnorm_spm)
+useDynLib(float,R_flrunif_spm)
+useDynLib(float,R_gamma_spm)
+useDynLib(float,R_ge_spm)
+useDynLib(float,R_gt_spm)
+useDynLib(float,R_init_NA)
+useDynLib(float,R_isSymmetric_spm)
+useDynLib(float,R_isavec_spm)
+useDynLib(float,R_isfinite_spm)
+useDynLib(float,R_isinfinite_spm)
+useDynLib(float,R_isna_spm)
+useDynLib(float,R_isnan_spm)
+useDynLib(float,R_le_spm)
+useDynLib(float,R_length_spm)
+useDynLib(float,R_lgamma_spm)
+useDynLib(float,R_log10_spm)
+useDynLib(float,R_log2_spm)
+useDynLib(float,R_log_spm)
+useDynLib(float,R_lt_spm)
+useDynLib(float,R_machine_spm)
+useDynLib(float,R_mat2spm)
+useDynLib(float,R_matmult_spm)
+useDynLib(float,R_max_spm)
+useDynLib(float,R_mean_spm)
+useDynLib(float,R_median_spm)
+useDynLib(float,R_min_spm)
+useDynLib(float,R_mul_spm)
+useDynLib(float,R_naomit_spm)
+useDynLib(float,R_ncol_spm)
+useDynLib(float,R_norm_spm)
+useDynLib(float,R_nrow_spm)
+useDynLib(float,R_numbytes_spm)
+useDynLib(float,R_pow_spm)
+useDynLib(float,R_qrQ_spm)
+useDynLib(float,R_qrR_spm)
+useDynLib(float,R_qr_spm)
+useDynLib(float,R_rcond_spm)
+useDynLib(float,R_round_spm)
+useDynLib(float,R_rowMeans_spm)
+useDynLib(float,R_rowSums_spm)
+useDynLib(float,R_scale_spm)
+useDynLib(float,R_sin_spm)
+useDynLib(float,R_sinh_spm)
+useDynLib(float,R_solve_spm)
+useDynLib(float,R_solve_spmspm)
+useDynLib(float,R_spm2mat)
+useDynLib(float,R_sqrt_spm)
+useDynLib(float,R_sub_spm)
+useDynLib(float,R_sum_spm)
+useDynLib(float,R_svd_spm)
+useDynLib(float,R_sweep_spm)
+useDynLib(float,R_symeig_spm)
+useDynLib(float,R_tan_spm)
+useDynLib(float,R_tanh_spm)
+useDynLib(float,R_tcrossprod_spm)
+useDynLib(float,R_tcrossprod_spmspm)
+useDynLib(float,R_trunc_spm)
+useDynLib(float,R_whichmax_spm)
+useDynLib(float,R_whichmin_spm)
+useDynLib(float,R_xpose_spm)
