--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ exportMethods(asin)
 exportMethods(asinh)
 exportMethods(atan)
 exportMethods(atanh)
+exportMethods(backsolve)
 exportMethods(c)
 exportMethods(ceiling)
 exportMethods(chol)
@@ -100,6 +101,7 @@ useDynLib(float,R_asin_spm)
 useDynLib(float,R_asinh_spm)
 useDynLib(float,R_atan_spm)
 useDynLib(float,R_atanh_spm)
+useDynLib(float,R_backsolve_spm)
 useDynLib(float,R_bracket_spm)
 useDynLib(float,R_bracketchecks_spm)
 useDynLib(float,R_c_spm)
