--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ exportMethods(eigen)
 exportMethods(exp)
 exportMethods(expm1)
 exportMethods(floor)
+exportMethods(forwardsolve)
 exportMethods(gamma)
 exportMethods(is.finite)
 exportMethods(is.infinite)
