--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ exportMethods(">")
 exportMethods(">=")
 exportMethods("[")
 exportMethods("^")
+exportMethods("dim<-")
 exportMethods(NCOL)
 exportMethods(NROW)
 exportMethods(crossprod)
