re-add xpose and matmult

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(fl)
 export(is.float)
 export(is.spm)
 exportClasses(float32)
+exportMethods("%*%")
 exportMethods("*")
 exportMethods("+")
 exportMethods("-")
@@ -28,6 +29,7 @@ exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
 exportMethods(show)
+exportMethods(t)
 exportMethods(tcrossprod)
 import(methods)
 importFrom(utils,capture.output)
@@ -43,9 +45,11 @@ useDynLib(float,R_le_spm)
 useDynLib(float,R_lt_spm)
 useDynLib(float,R_machine_spm)
 useDynLib(float,R_mat2spm)
+useDynLib(float,R_matmult_spm)
 useDynLib(float,R_mul_spm)
 useDynLib(float,R_pow_spm)
 useDynLib(float,R_spm2mat)
 useDynLib(float,R_sub_spm)
 useDynLib(float,R_tcrossprod_spm)
 useDynLib(float,R_tcrossprod_spmspm)
+useDynLib(float,R_xpose_spm)
