re-add isSymmetric

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ exportMethods(NCOL)
 exportMethods(NROW)
 exportMethods(crossprod)
 exportMethods(dim)
+exportMethods(isSymmetric)
 exportMethods(length)
 exportMethods(ncol)
 exportMethods(nrow)
@@ -41,6 +42,7 @@ useDynLib(float,R_eq_spm)
 useDynLib(float,R_ge_spm)
 useDynLib(float,R_gt_spm)
 useDynLib(float,R_init_NA)
+useDynLib(float,R_isSymmetric_spm)
 useDynLib(float,R_le_spm)
 useDynLib(float,R_lt_spm)
 useDynLib(float,R_machine_spm)
