--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ exportMethods("^")
 exportMethods("dim<-")
 exportMethods(NCOL)
 exportMethods(NROW)
+exportMethods(chol)
 exportMethods(crossprod)
 exportMethods(dim)
 exportMethods(isSymmetric)
@@ -35,6 +36,7 @@ exportMethods(tcrossprod)
 import(methods)
 importFrom(utils,capture.output)
 useDynLib(float,R_add_spm)
+useDynLib(float,R_chol_spm)
 useDynLib(float,R_crossprod_spm)
 useDynLib(float,R_crossprod_spmspm)
 useDynLib(float,R_div_spm)
