--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
 exportMethods(show)
+exportMethods(sweep)
 exportMethods(t)
 exportMethods(tcrossprod)
 import(methods)
@@ -54,6 +55,7 @@ useDynLib(float,R_mul_spm)
 useDynLib(float,R_pow_spm)
 useDynLib(float,R_spm2mat)
 useDynLib(float,R_sub_spm)
+useDynLib(float,R_sweep_spm)
 useDynLib(float,R_tcrossprod_spm)
 useDynLib(float,R_tcrossprod_spmspm)
 useDynLib(float,R_xpose_spm)
