--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
+exportMethods(scale)
 exportMethods(show)
 exportMethods(sweep)
 exportMethods(t)
@@ -53,6 +54,7 @@ useDynLib(float,R_mat2spm)
 useDynLib(float,R_matmult_spm)
 useDynLib(float,R_mul_spm)
 useDynLib(float,R_pow_spm)
+useDynLib(float,R_scale_spm)
 useDynLib(float,R_spm2mat)
 useDynLib(float,R_sub_spm)
 useDynLib(float,R_sweep_spm)
