re-add generators and eigen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(.Machine_float)
 export(dbl)
 export(fl)
+export(flrnorm)
+export(flrunif)
 export(is.float)
 export(is.spm)
 exportClasses(float32)
@@ -24,6 +26,7 @@ exportMethods(NROW)
 exportMethods(chol)
 exportMethods(crossprod)
 exportMethods(dim)
+exportMethods(eigen)
 exportMethods(isSymmetric)
 exportMethods(length)
 exportMethods(ncol)
@@ -43,6 +46,8 @@ useDynLib(float,R_crossprod_spm)
 useDynLib(float,R_crossprod_spmspm)
 useDynLib(float,R_div_spm)
 useDynLib(float,R_eq_spm)
+useDynLib(float,R_flrnorm_spm)
+useDynLib(float,R_flrunif_spm)
 useDynLib(float,R_ge_spm)
 useDynLib(float,R_gt_spm)
 useDynLib(float,R_init_NA)
@@ -58,6 +63,7 @@ useDynLib(float,R_scale_spm)
 useDynLib(float,R_spm2mat)
 useDynLib(float,R_sub_spm)
 useDynLib(float,R_sweep_spm)
+useDynLib(float,R_symeig_spm)
 useDynLib(float,R_tcrossprod_spm)
 useDynLib(float,R_tcrossprod_spmspm)
 useDynLib(float,R_xpose_spm)
