add generic generator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(.Machine_float)
 export(dbl)
 export(fl)
+export(flrand)
 export(flrnorm)
 export(flrunif)
 export(is.float)
@@ -46,6 +47,7 @@ useDynLib(float,R_crossprod_spm)
 useDynLib(float,R_crossprod_spmspm)
 useDynLib(float,R_div_spm)
 useDynLib(float,R_eq_spm)
+useDynLib(float,R_flrand_spm)
 useDynLib(float,R_flrnorm_spm)
 useDynLib(float,R_flrunif_spm)
 useDynLib(float,R_ge_spm)
