re-add svd and math funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,50 +22,109 @@ exportMethods(">=")
 exportMethods("[")
 exportMethods("^")
 exportMethods("dim<-")
+exportMethods(La.svd)
 exportMethods(NCOL)
 exportMethods(NROW)
+exportMethods(abs)
+exportMethods(acos)
+exportMethods(acosh)
+exportMethods(asin)
+exportMethods(asinh)
+exportMethods(atan)
+exportMethods(atanh)
+exportMethods(ceiling)
 exportMethods(chol)
+exportMethods(cos)
+exportMethods(cosh)
 exportMethods(crossprod)
 exportMethods(dim)
 exportMethods(eigen)
+exportMethods(exp)
+exportMethods(expm1)
+exportMethods(floor)
+exportMethods(gamma)
+exportMethods(is.finite)
+exportMethods(is.infinite)
+exportMethods(is.nan)
 exportMethods(isSymmetric)
 exportMethods(length)
+exportMethods(lgamma)
+exportMethods(log)
+exportMethods(log10)
+exportMethods(log2)
 exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
+exportMethods(round)
 exportMethods(scale)
 exportMethods(show)
+exportMethods(sin)
+exportMethods(sinh)
+exportMethods(sqrt)
+exportMethods(svd)
 exportMethods(sweep)
 exportMethods(t)
+exportMethods(tan)
+exportMethods(tanh)
 exportMethods(tcrossprod)
+exportMethods(trunc)
 import(methods)
 importFrom(utils,capture.output)
+useDynLib(float,R_abs_spm)
+useDynLib(float,R_acos_spm)
+useDynLib(float,R_acosh_spm)
 useDynLib(float,R_add_spm)
+useDynLib(float,R_asin_spm)
+useDynLib(float,R_asinh_spm)
+useDynLib(float,R_atan_spm)
+useDynLib(float,R_atanh_spm)
+useDynLib(float,R_ceiling_spm)
 useDynLib(float,R_chol_spm)
+useDynLib(float,R_cos_spm)
+useDynLib(float,R_cosh_spm)
 useDynLib(float,R_crossprod_spm)
 useDynLib(float,R_crossprod_spmspm)
 useDynLib(float,R_div_spm)
 useDynLib(float,R_eq_spm)
+useDynLib(float,R_exp_spm)
+useDynLib(float,R_expm1_spm)
+useDynLib(float,R_floor_spm)
 useDynLib(float,R_flrand_spm)
 useDynLib(float,R_flrnorm_spm)
 useDynLib(float,R_flrunif_spm)
+useDynLib(float,R_gamma_spm)
 useDynLib(float,R_ge_spm)
 useDynLib(float,R_gt_spm)
 useDynLib(float,R_init_NA)
 useDynLib(float,R_isSymmetric_spm)
+useDynLib(float,R_isfinite_spm)
+useDynLib(float,R_isinfinite_spm)
+useDynLib(float,R_isnan_spm)
 useDynLib(float,R_le_spm)
+useDynLib(float,R_lgamma_spm)
+useDynLib(float,R_log10_spm)
+useDynLib(float,R_log2_spm)
+useDynLib(float,R_log_spm)
 useDynLib(float,R_lt_spm)
 useDynLib(float,R_machine_spm)
 useDynLib(float,R_mat2spm)
 useDynLib(float,R_matmult_spm)
 useDynLib(float,R_mul_spm)
 useDynLib(float,R_pow_spm)
+useDynLib(float,R_round_spm)
 useDynLib(float,R_scale_spm)
+useDynLib(float,R_sin_spm)
+useDynLib(float,R_sinh_spm)
 useDynLib(float,R_spm2mat)
+useDynLib(float,R_sqrt_spm)
 useDynLib(float,R_sub_spm)
+useDynLib(float,R_svd_spm)
 useDynLib(float,R_sweep_spm)
 useDynLib(float,R_symeig_spm)
+useDynLib(float,R_tan_spm)
+useDynLib(float,R_tanh_spm)
 useDynLib(float,R_tcrossprod_spm)
 useDynLib(float,R_tcrossprod_spmspm)
+useDynLib(float,R_trunc_spm)
 useDynLib(float,R_xpose_spm)
